# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
gendiff/: __init__.py  gendiff.py  internal_diff.py
gendiff/formatter/: __init__.py  json.py  plain.py  stylish.py  tools.py
gendiff/formatters/: formatter.py  plain.py  stylish.py  tools.py
gendiff/scripts/: __init__.py  formatter.py  gendiff.py  internal_diff.py  parser.py
tests/: test_generate_diff.py
tests/fixtures/: json_view  plain_view  stylish_view  test_file1.json  test_file2.json  test_file2.yml
